--- a/src/main/resources/templates/edit.html
+++ b/src/main/resources/templates/edit.html
@@ -2,11 +2,16 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Edit</title>
 
     <!-- jQuery -->
     <script src="https://code.jquery.com/jquery-3.6.0.js"
             integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+          integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
     <!-- Select2 CSS-->
     <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet"/>
@@ -16,41 +21,71 @@
 
 </head>
 <body>
-<form method="POST" th:action="@{/edit}" th:object="${submission}" id="application-form">
-    <select id="userName" name="userName" class="select2-selector">
-        <option disabled selected>Select user</option>
-        <!--/*@thymesVar id="user" type="ae.accumed.dashboardadmin.model.UserResponse"*/-->
-        <option th:each="user: ${data.getUserResponses()}"
-                th:value="${user.userName}"
-                th:text="${user.name}"
-                th:if="${user.isActive}"
-                th:selected="${user.getUserName().equals(currentUser.getUserName())}">
-        </option>
-    </select>
-
-    <select id="facilityLicences" name="facilityLicences" class="select-facility-multiple select2-selector"
-            multiple="multiple">
-        <!--/*@thymesVar id="facility" type="ae.accumed.dashboardadmin.entities.Facility"*/-->
-        <option th:each="facility: ${data.getFacilities()}"
-                th:value="${facility.facilityLicence}"
-                th:text="${facility.facilityName}"
-                th:if="${!facility.isDeleted}"
-                th:selected="${currentUser.getFacilityLicences().contains(facility.facilityLicence)}">
-        </option>
-    </select>
-
-    <input type="submit" value="Submit">
-
-    <div th:switch="${message}">
-        <div th:case="'Success'" class="alert alert-success">
-            <strong>Success!</strong> Operation performed successfully.
-        </div>
-        <div th:case="'Failed'" class="alert alert-danger">
-            <strong>Failure!</strong> Operation failed. Please try again
-        </div>
+<div class="cbp-af-header" style="margin-left: 2.5em;padding: 0 7em 2em 0;border-width: 2px;">
+    <div class="cbp-af-inner">
+        <h1>Dashboard</h1>
+        <nav>
+            <a th:href="@{/}">Home</a>
+            <a th:href="@{/edit}">Edit all</a>
+        </nav>
     </div>
-</form>
+</div>
+<div class="container-md">
+    <form method="POST" th:action="@{/edit}" th:object="${submission}" id="application-form">
+        <div class="container-md">
 
+            <div class="row-cols-md-1">
+                <div class="column">
+                    <select id="userName" name="userName" class="select2-selector">
+                        <option disabled selected>Select user</option>
+                        <!--/*@thymesVar id="user" type="ae.accumed.dashboardadmin.model.UserResponse"*/-->
+                        <option th:each="user: ${data.getUserResponses()}"
+                                th:value="${user.userName}"
+                                th:text="${user.name}"
+                                th:if="${user.isActive}"
+                                th:selected="${user.getUserName().equals(currentUser.getUserName())}">
+                        </option>
+                    </select>
+                </div>
+            </div>
+
+            <div class="row-cols-md-1-cols-md-1">
+                <div class="column">
+                    <select id="facilityLicences" name="facilityLicences"
+                            class="select-facility-multiple select2-selector"
+                            multiple="multiple">
+                        <!--/*@thymesVar id="facility" type="ae.accumed.dashboardadmin.entities.Facility"*/-->
+                        <option th:each="facility: ${data.getFacilities()}"
+                                th:value="${facility.facilityLicence}"
+                                th:text="${facility.facilityName}"
+                                th:if="${!facility.isDeleted}"
+                                th:selected="${currentUser.getFacilityLicences().contains(facility.facilityLicence)}">
+                        </option>
+                    </select>
+                </div>
+            </div>
+
+            <div class="row-cols-md-1">
+                <div class="column">
+                    <input type="submit" value="Submit">
+                </div>
+            </div>
+
+            <div class="row-cols-md-1">
+                <div class="column">
+                    <div th:switch="${message}">
+                        <div th:case="'Success'" class="alert alert-success">
+                            <strong>Success!</strong> Operation performed successfully.
+                        </div>
+                        <div th:case="'Failed'" class="alert alert-danger">
+                            <strong>Failure!</strong> Operation failed. Please try again
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </form>
+</div>
 <script type="text/javascript">
     $(document).ready(function () {
         $(".select2-selector").select2();
@@ -70,6 +105,8 @@
 
     document.getElementById("userName").onchange = listQ;
 </script>
-
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-p34f1UUtsS3wqzfto5wAAmdvj+osOnFyQFpp4Ua3gs/ZVWx6oOypYoCJhGGScy+8"
+        crossorigin="anonymous"></script>
 </body>
 </html>
