--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -2,20 +2,33 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Dashboard</title>
 
     <!-- jQuery -->
     <script src="https://code.jquery.com/jquery-3.6.0.js"
             integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
 
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+          integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+
     <!-- DataTable CSS-->
     <link href="https://cdn.datatables.net/1.10.24/css/jquery.dataTables.min.css" rel="stylesheet"/>
 
     <!-- DataTable JS-->
     <script src="https://cdn.datatables.net/1.10.24/js/jquery.dataTables.min.js"></script>
-
 </head>
 <body>
+<div class="cbp-af-header" style="margin-left: 2.5em;padding: 0 7em 2em 0;border-width: 2px;">
+    <div class="cbp-af-inner">
+        <h1>Dashboard</h1>
+        <nav>
+            <a th:href="@{/}">Home</a>
+            <a th:href="@{/edit}">Edit all</a>
+        </nav>
+    </div>
+</div>
 <table id="myTable" class="display">
     <thead>
     <tr>
@@ -27,7 +40,7 @@
     <tbody>
     <!--/*@thymesVar id="user" type="ae.accumed.dashboardadmin.model.UserResponse"*/-->
     <tr th:each="user: ${data.getUserResponses()}">
-        <td th:text="${user.name}">Row 1 Data 1</td>
+        <td th:text="${user.name} + ' / ' + ${user.userName}">Row 1 Data 1</td>
         <td>
             <!--/*@thymesVar id="facility" type="ae.accumed.dashboardadmin.entities.Facility"*/-->
             <div th:each="facility: ${data.getFacilities()}" th:text="${facility.facilityName}"
@@ -47,5 +60,6 @@
         $('#myTable').DataTable();
     });
 </script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-p34f1UUtsS3wqzfto5wAAmdvj+osOnFyQFpp4Ua3gs/ZVWx6oOypYoCJhGGScy+8" crossorigin="anonymous"></script>
 </body>
 </html>
