--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -20,46 +20,41 @@
     <script src="https://cdn.datatables.net/1.10.24/js/jquery.dataTables.min.js"></script>
 </head>
 <body>
-<div class="cbp-af-header" style="margin-left: 2.5em;padding: 0 7em 2em 0;border-width: 2px;">
-    <div class="cbp-af-inner">
-        <h1>Dashboard</h1>
-        <nav>
-            <a th:href="@{/}">Home</a>
-            <a th:href="@{/edit}">Edit all</a>
-        </nav>
-    </div>
+<header th:insert="header.html :: header"></header>
+<div class="container-fluid">
+    <table id="myTable" class="display">
+        <thead>
+        <tr>
+            <th>Name</th>
+            <th>Facilities</th>
+            <th>Actions</th>
+        </tr>
+        </thead>
+        <tbody>
+        <!--/*@thymesVar id="user" type="ae.accumed.dashboardadmin.model.UserResponse"*/-->
+        <tr th:each="user: ${data.getUserResponses()}">
+            <td th:text="${user.name} + ' / ' + ${user.userName}">Row 1 Data 1</td>
+            <td>
+                <!--/*@thymesVar id="facility" type="ae.accumed.dashboardadmin.entities.Facility"*/-->
+                <div th:each="facility: ${data.getFacilities()}" th:text="${facility.facilityName}"
+                     th:if="${user.getFacilityLicences().contains(facility.facilityLicence)}"></div>
+            </td>
+            <td>
+                <form method="GET" th:action="@{/edit/{userName}(userName=${user.userName})}">
+                    <input type="submit" value="Edit">
+                </form>
+            </td>
+        </tr>
+        </tbody>
+    </table>
 </div>
-<table id="myTable" class="display">
-    <thead>
-    <tr>
-        <th>Name</th>
-        <th>Facilities</th>
-        <th>Actions</th>
-    </tr>
-    </thead>
-    <tbody>
-    <!--/*@thymesVar id="user" type="ae.accumed.dashboardadmin.model.UserResponse"*/-->
-    <tr th:each="user: ${data.getUserResponses()}">
-        <td th:text="${user.name} + ' / ' + ${user.userName}">Row 1 Data 1</td>
-        <td>
-            <!--/*@thymesVar id="facility" type="ae.accumed.dashboardadmin.entities.Facility"*/-->
-            <div th:each="facility: ${data.getFacilities()}" th:text="${facility.facilityName}"
-                 th:if="${user.getFacilityLicences().contains(facility.facilityLicence)}"></div>
-        </td>
-        <td>
-            <form method="GET" th:action="@{/edit/{userName}(userName=${user.userName})}">
-                <input type="submit" value="Edit">
-            </form>
-        </td>
-    </tr>
-    </tbody>
-</table>
-
 <script>
     $(document).ready(function () {
         $('#myTable').DataTable();
     });
 </script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-p34f1UUtsS3wqzfto5wAAmdvj+osOnFyQFpp4Ua3gs/ZVWx6oOypYoCJhGGScy+8" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-p34f1UUtsS3wqzfto5wAAmdvj+osOnFyQFpp4Ua3gs/ZVWx6oOypYoCJhGGScy+8"
+        crossorigin="anonymous"></script>
 </body>
 </html>
