--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -32,6 +32,9 @@
             <form method="GET" th:action="@{/edit}" class="nav-form" style="display: inline-block">
                 <input type="submit" value="Edit access" class="btn btn-primary">
             </form>
+            <form method="GET" th:action="@{/cluster}" class="nav-form" style="display: inline-block">
+                <input type="submit" value="Edit cluster access" class="btn btn-primary">
+            </form>
         </nav>
     </div>
 </div>
