--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -13,7 +13,7 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-9">
-                    <h1 style="color:#FFFFFF;">Dashboard</h1>
+                    <h1 style="color:#FFFFFF;">MOH Dashboard admin</h1>
                 </div>
                 <div class="col-3">
                     <nav>
@@ -33,7 +33,7 @@
                 <input type="submit" value="Edit access" class="btn btn-primary">
             </form>
             <form method="GET" th:action="@{/cluster}" class="nav-form" style="display: inline-block">
-                <input type="submit" value="Edit cluster access" class="btn btn-primary">
+                <input type="submit" value="Edit access by cluster" class="btn btn-primary">
             </form>
         </nav>
     </div>
