--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:sec="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
@@ -15,7 +15,7 @@
                 <div class="col-9">
                     <h1 style="color:#FFFFFF;">MOH Dashboard admin</h1>
                 </div>
-                <div class="col-3">
+                <div sec:authorize="isAuthenticated()" class="col-3">
                     <nav>
                         <h6 style="color:#FFFFFF;display: inline-block">Welcome, Admin!</h6>
                         <form method="POST" th:action="@{/logout}" style="display: inline-block">
@@ -25,17 +25,19 @@
                 </div>
             </div>
         </div>
-        <nav>
-            <form method="GET" th:action="@{/}" style="display: inline-block">
-                <input type="submit" value="List all access" class="btn btn-primary">
-            </form>
-            <form method="GET" th:action="@{/edit}" class="nav-form" style="display: inline-block">
-                <input type="submit" value="Edit access" class="btn btn-primary">
-            </form>
-            <form method="GET" th:action="@{/cluster}" class="nav-form" style="display: inline-block">
-                <input type="submit" value="Edit access by cluster" class="btn btn-primary">
-            </form>
-        </nav>
+        <div sec:authorize="isAuthenticated()">
+            <nav>
+                <form method="GET" th:action="@{/}" style="display: inline-block">
+                    <input type="submit" value="List all access" class="btn btn-primary">
+                </form>
+                <form method="GET" th:action="@{/edit}" class="nav-form" style="display: inline-block">
+                    <input type="submit" value="Edit access" class="btn btn-primary">
+                </form>
+                <form method="GET" th:action="@{/cluster}" class="nav-form" style="display: inline-block">
+                    <input type="submit" value="Edit access by cluster" class="btn btn-primary">
+                </form>
+            </nav>
+        </div>
     </div>
 </div>
 </body>
